--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,40 @@
     <link rel="stylesheet" href="assets/style/style.css">
 </head>
 <body>
-<h1>個人網頁</h1>
+<div class="header container font-style-italic">
+  <div class="banner color-white">
+    <p class="pt-308">Here’s</p>
+    <h1 class="mb-32">JOANNE</h1>
+    <h3 class="mb-40">Founder of “XXXD Official’’ <br>& Graphic Designer</h3>
+    <ul>
+      <li><a href="#"><img src="../app/assets/images/behance.svg" alt="behance"></a></li>
+      <li><a href="#"><img src="../app/assets/images/facebook.svg" alt="facebook"></a></li>
+      <li><a href="#"><img src="../app/assets/images/instagram.svg" alt="instagram"></a></li>
+      <li class="pb-308"><a href="#"><img src="../app/assets/images/youtube.svg" alt="youtube"></a></li>
+    </ul>
+  </div>
+</div>
+<div class="main container font-style-italic">
+  <div class="about">
+    <h2 class="mb-40">About</h2>
+    <img class="mb-20" src="../app/assets/images/photo.png" alt="大頭照">
+    <ul class="f-w-bold">
+      <li class="fz-24-42 mb-4">Joanne Chen</li>
+      <li class="fz-24-42 mb-8">1997/10/10</li>
+      <li class="fz-24-36 mb-24">National Hex School Normal University<br>Department of Visual Design</li>
+      <li></li>
+    </ul>
+    <ul class="f-w-bold">
+      <li class="fz-24-42 mb-28 dot" >Founder of ‘’XXXD Official’’</li>
+      <li class="fz-24-42 mb-28 dot">Graphic Designer</li>
+      <li class="fz-24-42 mb-56 dot">Graphic Intern of Hex School</li>
+    </ul>
+  </div>
+  <div class="brand"></div>
+  <div class="work"></div>
+</div>
+<div class="footer">
+  <div class="contact"></div>
+</div>
 </body>
 </html>
