--- a/app/index.html
+++ b/app/index.html
@@ -14,17 +14,17 @@
     <h1 class="mb-32">JOANNE</h1>
     <h3 class="mb-40">Founder of “XXXD Official’’ <br>& Graphic Designer</h3>
     <ul>
-      <li><a href="#"><img src="../app/assets/images/behance.svg" alt="behance"></a></li>
-      <li><a href="#"><img src="../app/assets/images/facebook.svg" alt="facebook"></a></li>
-      <li><a href="#"><img src="../app/assets/images/instagram.svg" alt="instagram"></a></li>
-      <li class="pb-308"><a href="#"><img src="../app/assets/images/youtube.svg" alt="youtube"></a></li>
+      <li><a href="#"><img src="assets/images/behance.svg" alt="behance"></a></li>
+      <li><a href="#"><img src="assets/images/facebook.svg" alt="facebook"></a></li>
+      <li><a href="#"><img src="assets/images/instagram.svg" alt="instagram"></a></li>
+      <li class="pb-308"><a href="#"><img src="assets/images/youtube.svg" alt="youtube"></a></li>
     </ul>
   </div>
 </div>
 <div class="main container font-style-italic">
   <div class="about">
     <h2 class="mb-40">About</h2>
-    <img class="mb-20" src="../app/assets/images/photo.png" alt="大頭照">
+    <img class="mb-20" src="assets/images/photo.png" alt="大頭照">
     <ul class="f-w-bold">
       <li class="fz-24-42 mb-4">Joanne Chen</li>
       <li class="fz-24-42 mb-8">1997/10/10</li>
@@ -37,11 +37,63 @@
       <li class="fz-24-42 mb-56 dot">Graphic Intern of Hex School</li>
     </ul>
   </div>
-  <div class="brand"></div>
-  <div class="work"></div>
+  <div class="brand color-white">
+    <h2 class="mb-12">My Brand ‘’XXXD’’</h2>
+    <p class="fz-24-42 mb-32">Just Keep XXXD Everyday</p>
+    <p class="fz-20-30 mb-68 font-style-normal">2020 年創立的個人服飾品牌<br>引領叛逆少年開啟與社會對話的窗口<br>主打概念潮流T-Shirt</p>
+    <ul class="df-wrap">
+      <li class="mb-40"><img src="assets/images/brand_img1.png" alt=""></li>
+      <li class="mr-24"><img src="assets/images/brand_img2.png" alt=""></li>
+      <li><img src="assets/images/brand_img3.png" alt=""></li>
+    </ul>
+  </div>
+  <div class="work">
+    <h2>Other Works</h2>
+    <p class="fz-20-30 font-style-normal mb-56">2016-2020 年累積的作品<br>海報/廣告/攝影/LOGO/3D</p>
+    <ul class="df-wrap font-style-normal fz-20-42">
+      <li>
+        <img class="mb-16 mr-24" src="assets/images/work_img1.png" alt="海報設計/2017圖片">
+        <p class="mb-48">海報設計/2017</p>
+      </li>
+      <li>
+        <img class="mb-16 mr-24" src="assets/images/work_img2.png" alt="海報設計/2018圖片">
+        <p class="mb-48">海報設計/2018</p>
+      </li>
+      <li>
+        <img class="mb-16 mr-24" src="assets/images/work_img3.png" alt="海報設計/2018圖片">
+        <p class="mb-48">海報設計/2018</p>
+      </li>
+      <li>
+        <img class="mb-16 mr-24" src="assets/images/work_img4.png" alt="概念攝影/2018圖片">
+        <p class="mb-48">概念攝影/2018</p>
+      </li>
+      <li>
+        <img class="mb-16 mr-24" src="assets/images/work_img5.png" alt="概念攝影/2018圖片">
+        <p class="mb-48">概念攝影/2018</p>
+      </li>
+      <li>
+        <img class="mb-16 mr-24" src="assets/images/work_img6.png" alt="sasa 酒標設計/2019圖片">
+        <p class="mb-48">sasa 酒標設計/2019</p>
+      </li>
+      <li>
+        <img class="mb-16 mr-24" src="assets/images/work_img7.png" alt="攝影創作/2018圖片">
+        <p class="mb-48">攝影創作/2018</p>
+      </li>
+      <li>
+        <img class="mb-16 mr-24" src="assets/images/work_img8.png" alt="官網設計/2020圖片">
+        <p class="mb-48">官網設計/2020</p>
+      </li>
+    </ul>
+  </div>
 </div>
-<div class="footer">
-  <div class="contact"></div>
+<div class="footer color-white mb-16 font-style-italic">
+  <div class="contact">
+    <h2>Contact</h2>
+    <ul class="fz-24-36">
+      <li>Mail：xxxd@hexschool.com</li>
+      <li>Phone Number：0910123456</li>
+    </ul>
+  </div>
 </div>
 </body>
 </html>
